--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -102,6 +102,19 @@ jobs:
       name: prod-email-sender
     needs: [ java, build ]
     steps:
+      - uses: actions/checkout@v3
+      - name: Update application.yaml
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: './src/main/resources/application.yaml'
+          propertyPath: |
+            'spring.email.username'
+            'spring.email.password'
+          value: |
+            ${{secrets.SPRING_GOOGLE_EMAIL}}
+            ${{secrets.SPRING_GOOGLE_TOKEN}}
+          commitChange: false
+          updateFile: true
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         url: https://prod-email-sender.herokuapp.com/
