Updated Environment Prod and develop

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -66,6 +66,8 @@ jobs:
   test:
     name: 📂 Test
     runs-on: ubuntu-latest
+    environment:
+      name: stg-email-sender
     needs: [ install, java ]
     steps:
       - uses: actions/checkout@v3
@@ -86,6 +88,8 @@ jobs:
   build:
     name: 📂 Build
     runs-on: ubuntu-latest
+    environment:
+      name: stg-email-sender
     needs: [ test, java ]
     steps:
       - uses: actions/checkout@v3
