--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -117,12 +117,12 @@ jobs:
         uses: fjogeleit/yaml-update-action@main
         with:
           valueFile: './src/main/resources/application.yaml'
-          propertyPath: |
-            'spring.mail.username'
-            'spring.mail.password'
-          value: |
-            ${{secrets.SPRING_GOOGLE_EMAIL}}
-            ${{secrets.SPRING_GOOGLE_TOKEN}}
+          title: 'Version Updates '
+          changes: |
+            {
+              "spring.mail.username": "${{ secrets.SPRING_GOOGLE_EMAIL }}",
+              "spring.mail.password": "${{ secrets.SPRING_GOOGLE_TOKEN }}"
+            }
           commitChange: false
           updateFile: true
       - uses: actions/checkout@v2
