--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -108,17 +108,17 @@ jobs:
         uses: fjogeleit/yaml-update-action@main
         with:
           valueFile: './src/main/resources/application.yaml'
-          propertyPath: |
-            'spring.email.username'
-            'spring.email.password'
-          value: |
-            ${{secrets.SPRING_GOOGLE_EMAIL}}
-            ${{secrets.SPRING_GOOGLE_TOKEN}}
+          title: 'Version Updates '
+          changes: |
+            {
+              "spring.mail.username": "${{ secrets.SPRING_GOOGLE_EMAIL }}",
+              "spring.mail.password": "${{ secrets.SPRING_GOOGLE_TOKEN }}"
+            }
           commitChange: false
           updateFile: true
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-          heroku_api_key: HEROKU_API_KEY
-          heroku_app_name: HEROKU_APP_NAME #Must be unique in Heroku
-          heroku_email: HEROKU_EMAIL
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }} #Must be unique in Heroku
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
