--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -104,30 +104,30 @@ jobs:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
 
-  deploy:
-    name: 🚀 Deploy
-    runs-on: ubuntu-latest
-    environment:
-      name: stg-email-sender
-      url: https://stg-email-sender.herokuapp.com
-    needs: [ java, build ]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Update application.yaml
-        uses: fjogeleit/yaml-update-action@main
-        with:
-          valueFile: './src/main/resources/application.yaml'
-          title: 'Version Updates '
-          changes: |
-            {
-              "spring.mail.username": "${{ secrets.SPRING_GOOGLE_EMAIL }}",
-              "spring.mail.password": "${{ secrets.SPRING_GOOGLE_TOKEN }}"
-            }
-          commitChange: false
-          updateFile: true
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }} #Must be unique in Heroku
-          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+  #deploy:
+  #  name: 🚀 Deploy
+  #  runs-on: ubuntu-latest
+  #  environment:
+  #    name: stg-email-sender
+  #    url: https://stg-email-sender.herokuapp.com
+  #  needs: [ java, build ]
+  #  steps:
+  #    - uses: actions/checkout@v3
+  #    - name: Update application.yaml
+  #      uses: fjogeleit/yaml-update-action@main
+  #      with:
+  #        valueFile: './src/main/resources/application.yaml'
+  #        title: 'Version Updates '
+  #        changes: |
+  #          {
+  #            "spring.mail.username": "${{ secrets.SPRING_GOOGLE_EMAIL }}",
+  #            "spring.mail.password": "${{ secrets.SPRING_GOOGLE_TOKEN }}"
+  #          }
+  #        commitChange: false
+  #        updateFile: true
+  #    - uses: actions/checkout@v2
+  #    - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+  #      with:
+  #        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+  #        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }} #Must be unique in Heroku
+  #        heroku_email: ${{ secrets.HEROKU_EMAIL }}
