--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -108,8 +108,9 @@ jobs:
     needs: [ java, build ]
     steps:
       - uses: bervProject/railway-deploy@main
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         with:
-          railway_token: ${{ secrets.RAILWAY_TOKEN }}
           service: "email-sender"
       #- uses: actions/checkout@v2
       #- uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
