--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -104,30 +104,40 @@ jobs:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
 
-  #deploy:
-  #  name: 🚀 Deploy
-  #  runs-on: ubuntu-latest
-  #  environment:
-  #    name: stg-email-sender
-  #    url: https://stg-email-sender.herokuapp.com
-  #  needs: [ java, build ]
-  #  steps:
-  #    - uses: actions/checkout@v3
-  #    - name: Update application.yaml
-  #      uses: fjogeleit/yaml-update-action@main
-  #      with:
-  #        valueFile: './src/main/resources/application.yaml'
-  #        title: 'Version Updates '
-  #        changes: |
-  #          {
-  #            "spring.mail.username": "${{ secrets.SPRING_GOOGLE_EMAIL }}",
-  #            "spring.mail.password": "${{ secrets.SPRING_GOOGLE_TOKEN }}"
-  #          }
-  #        commitChange: false
-  #        updateFile: true
-  #    - uses: actions/checkout@v2
-  #    - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-  #      with:
-  #        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-  #        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }} #Must be unique in Heroku
-  #        heroku_email: ${{ secrets.HEROKU_EMAIL }}
+  deploy:
+    name: 🚀 Deploy
+    runs-on: ubuntu-latest
+    environment:
+      name: stg-email-sender
+      url: https://hub.docker.com/repository/docker/giovannilamarmora/email-sender/general
+    needs: [ java, build ]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
+      - name: Build with Maven
+        run: mvn clean install #-DskipTests
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+          image: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}
+          buildArgs: DEPLOY=STG
+          tags: latest
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Remove File
+        uses: JesseTG/rm@v1.0.3
+        with:
+          path: /Dockerfile
