--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -7,41 +7,21 @@ on:
   push:
     branches: [ master ]
 
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  DOCKER_REPOSITORY: ${{ secrets.DOCKER_REPOSITORY }}
+
 jobs:
-  setting-up:
-    name: ☁️ Setting Up
+  checkout-and-setup:
+    name: 🔧 Checkout and Setup
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: 🚀 Setting Up Deployment Package
-        run: echo Process Started!!!
+      - name: "☁️ Checkout Repository"
+        uses: actions/checkout@v3
 
-  java:
-    name: 🔧 Java 11
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v3
-      - name: 🔧 Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-
-  install:
-    name: 🌱 Install
-    runs-on: ubuntu-latest
-    environment:
-      name: prod-email-sender
-    needs: [ setting-up, java ]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK and Maven
+        id: setup
         uses: actions/setup-java@v3
         with:
           java-version: '11'
@@ -49,55 +29,45 @@ jobs:
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           server-username: GITHUB_USERNAME  # env variable name for username
           server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
-      - name: Install with Maven
-        run: mvn -X clean install
+
+  install-test-and-build:
+    name: 🌱 Install, Test and Build
+    runs-on: ubuntu-latest
+    needs: checkout-and-setup
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: ⬇️ Install dependencies
+        run: |
+          mvn -X clean install
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
 
-  test:
-    name: 📂 Test
-    runs-on: ubuntu-latest
-    environment:
-      name: prod-email-sender
-    needs: [ install, java ]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: GITHUB_USERNAME  # env variable name for username
-          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
       - name: 📂 Test with Maven
-        run: mvn test
+        run: |
+          mvn test
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
 
-  build:
-    name: 📂 Build
-    runs-on: ubuntu-latest
-    environment:
-      name: prod-email-sender
-    needs: [ test, java ]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: GITHUB_USERNAME  # env variable name for username
-          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      - name: 📂 Build with Maven
+        run: |
+          mvn -B package --file pom.xml -DskipTests
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
           API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
+
+  docker-login:
+    name: 🐳 Docker Login
+    runs-on: ubuntu-latest
+    needs: install-test-and-build
+    steps:
+      - name: 🐳 Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
 
   deploy:
     name: 🚀 Deploy
@@ -105,32 +75,24 @@ jobs:
     environment:
       name: prod-email-sender
       url: https://hub.docker.com/repository/docker/giovannilamarmora/email-sender/general
-    needs: [ java, build ]
+    needs: [ install-test-and-build, docker-login ]
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: maven
-      - name: Build with Maven
-        run: mvn clean install #-DskipTests
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: actions/checkout@v3
+
+      - name: 📝 Set Release Version
+        run: |
+          echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6.2
         with:
-          image: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}
+          image: ${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_REPOSITORY }}
           buildArgs: DEPLOY=STG
-          tags: latest
+          #tags: latest
+          tags: ${{ env.RELEASE_VERSION }}, latest
           registry: docker.io
           dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
           multiPlatform: true
           platform: linux/amd64,linux/arm64
