--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -62,6 +62,8 @@ jobs:
     name: 🐳 Docker Login
     runs-on: ubuntu-latest
     needs: install-test-and-build
+    environment:
+      name: prod-email-sender
     steps:
       - name: 🐳 Log in to Docker Hub
         uses: docker/login-action@v3
