--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -26,12 +26,13 @@ jobs:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v3
-      - name: 🔧 Set up JDK 11
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK and Maven
+        id: setup
+        uses: actions/setup-java@v4.2.1
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '22'
+          distribution: 'corretto'
 
   install:
     name: 🌱 Install
@@ -40,12 +41,13 @@ jobs:
       name: stg-email-sender
     needs: [ setting-up, java ]
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK and Maven
+        id: setup
+        uses: actions/setup-java@v4.2.1
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '22'
+          distribution: 'corretto'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           server-username: GITHUB_USERNAME  # env variable name for username
           server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
@@ -70,12 +72,13 @@ jobs:
       name: stg-email-sender
     needs: [ install, java ]
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK and Maven
+        id: setup
+        uses: actions/setup-java@v4.2.1
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '22'
+          distribution: 'corretto'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           server-username: GITHUB_USERNAME  # env variable name for username
           server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
@@ -92,12 +95,13 @@ jobs:
       name: stg-email-sender
     needs: [ test, java ]
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK and Maven
+        id: setup
+        uses: actions/setup-java@v4.2.1
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '22'
+          distribution: 'corretto'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           server-username: GITHUB_USERNAME  # env variable name for username
           server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
