--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -18,14 +18,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "☁️ Checkout Repository"
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK and Maven
         id: setup
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4.2.1
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '22'
+          distribution: 'corretto'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           server-username: GITHUB_USERNAME  # env variable name for username
           server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
@@ -35,7 +35,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: checkout-and-setup
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK and Maven
+        id: setup
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '22'
+          distribution: 'corretto'
 
       - name: ⬇️ Install dependencies
         run: |
@@ -72,24 +79,38 @@ jobs:
           password: ${{ env.DOCKER_PASSWORD }}
 
   deploy:
-    name: 🚀 Deploy
+    name: 🚀 Build & Push Docker Image
     runs-on: ubuntu-latest
     environment:
       name: prod-email-sender
       url: https://hub.docker.com/repository/docker/giovannilamarmora/email-sender/general
     needs: [ install-test-and-build, docker-login ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK and Maven
+        id: setup
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '22'
+          distribution: 'corretto'
 
       - name: 📝 Set Release Version
         run: |
           echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
+      - name: create-json
+        uses: jsdaniell/create-json@v1.2.3
+        with:
+          name: "credentials.json"
+          json: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
+          dir: "src/main/resources/"
+
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6.2
         with:
           image: ${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_REPOSITORY }}
-          buildArgs: DEPLOY=STG
+          buildArgs: DEPLOY=PROD
           #tags: latest
           tags: ${{ env.RELEASE_VERSION }}, latest
           registry: docker.io
