--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       - LOGTAIL_LOGS=${LOGTAIL_LOGS}
       - LOGGING_LEVEL=${LOGGING_LEVEL}
       - SHOW_UTILS_EXCEPTION_STACKTRACE=${SHOW_UTILS_EXCEPTION_STACKTRACE}
+      - GCLOUD_PROJECT=${GCLOUD_PROJECT}
+      - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
+      - APP_ENV=${APP_ENV}
+      - STRAPI_AUTH_TOKEN=${STRAPI_AUTH_TOKEN}
     networks:
       docker-network:
         aliases:
