--- a/src/main/resources/application-deploy.yaml
+++ b/src/main/resources/application-deploy.yaml
@@ -1,61 +1,24 @@
 env: ${APP_ENV:Deploy} # Used for Google Cloud LOG
 spring:
-  application:
-    name: Email-Sender
-    starter-log: true
   mail:
-    host: smtp.gmail.com
-    port: 587
-    username: ${GMAIL_EMAIL}
-    password: ${GMAIL_TOKEN}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-server:
-  servlet:
-    context-path:
+    host: ${SMTP_HOST}
+    port: ${SMTP_PORT}
+    username: ${SERVER_EMAIL}
+    password: ${SERVER_TOKEN}
+    sender-emails: ${SENDER_EMAILS}
 
 logging:
   config: classpath:logback-google.xml # classpath:logback-google.xml, classpath:logback-logtail.xml
   level:
     com.giovannilamarmora.dispatch.emailsender: ${LOGGING_LEVEL}
     io.github.giovannilamarmora.utils: ${LOGGING_LEVEL}
-    web: INFO
-    root: INFO
-    org:
-      springframework:
-        web: INFO
-      hibernate: ERROR
 
 app:
   version: @project.version@ # Show Project Version
-  shouldNotFilter: "**/swagger-ui/**,/api-docs,**/api-docs/**,*/,*/css/*,*/js/*,*/images/*,*/favicon.ico,/index.html"
   exception:
     stacktrace: ${SHOW_UTILS_EXCEPTION_STACKTRACE} # Active StackTrace in Response
-  # Cors status
-  cors: # Disabled
-    enabled: false
-
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /swagger-ui.html
-    disable-swagger-default-url: true
-
-filter:
-  requestResponse:
-    enabled: true
-    shouldNotFilter: "**/swagger-ui/**,/api-docs,**/api-docs/**,*/,*/css/*,*/js/*,*/images/*,*/favicon.ico,/index.html"
 
 rest:
   client:
     strapi:
-      active: true
       baseUrl: http://app.strapi.cms:1337
-      bearer: ${STRAPI_AUTH_TOKEN}
-      path:
-        getTemplate: /api/email-templates
