--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - SMTP_PORT=${SMTP_PORT}
       - SERVER_EMAIL=${SERVER_EMAIL}
       - SERVER_TOKEN=${SERVER_TOKEN}
+      - SENDER_EMAILS=${SENDER_EMAILS}
       - SHOW_UTILS_EXCEPTION_STACKTRACE=${SHOW_UTILS_EXCEPTION_STACKTRACE}
       - GCLOUD_PROJECT=${GCLOUD_PROJECT}
       - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
