--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - SERVER_EMAIL=${SERVER_EMAIL}
       - SERVER_TOKEN=${SERVER_TOKEN}
       - SENDER_EMAILS=${SENDER_EMAILS}
+      - LOGGING_LEVEL=${LOGGING_LEVEL}
       - SHOW_UTILS_EXCEPTION_STACKTRACE=${SHOW_UTILS_EXCEPTION_STACKTRACE}
       - GCLOUD_PROJECT=${GCLOUD_PROJECT}
       - GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
