--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Set up JDK and Maven
         id: setup
-        uses: actions/setup-java@v4.6.0
+        uses: actions/setup-java@v4.7.0
         with:
           java-version: '22'
           distribution: 'corretto'
@@ -39,7 +39,7 @@ jobs:
 
       - name: Set up JDK and Maven
         id: setup
-        uses: actions/setup-java@v4.6.0
+        uses: actions/setup-java@v4.7.0
         with:
           java-version: '22'
           distribution: 'corretto'
@@ -90,7 +90,7 @@ jobs:
 
       - name: Set up JDK and Maven
         id: setup
-        uses: actions/setup-java@v4.6.0
+        uses: actions/setup-java@v4.7.0
         with:
           java-version: '22'
           distribution: 'corretto'
@@ -99,12 +99,12 @@ jobs:
         run: |
           echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
-      - name: create-json
-        uses: jsdaniell/create-json@v1.2.3
-        with:
-          name: "credentials.json"
-          json: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
-          dir: "src/main/resources/"
+      #- name: create-json
+      #  uses: jsdaniell/create-json@v1.2.3
+      #  with:
+      #    name: "credentials.json"
+      #    json: ${{ secrets.GOOGLE_CREDENTIALS_JSON }}
+      #    dir: "src/main/resources/"
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6.4
