--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -48,9 +48,9 @@ jobs:
         with:
           java-version: '22'
           distribution: 'corretto'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: GITHUB_USERNAME  # env variable name for username
-          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
+          #server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          #server-username: GITHUB_USERNAME  # env variable name for username
+          #server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
       #- name: Setup settings-xml
       #  uses: whelk-io/maven-settings-xml-action@v20
       #  with:
@@ -60,9 +60,9 @@ jobs:
       #    output_file: .m2/settings.xml
       - name: Install with Maven
         run: mvn -X clean install
-        env:
-          GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
-          API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
+        #env:
+        #  GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
+        #  API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
 
 
   test:
@@ -84,9 +84,9 @@ jobs:
           server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
       - name: 📂 Test with Maven
         run: mvn test
-        env:
-          GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
-          API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
+        #env:
+        #  GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
+        #  API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
 
   build:
     name: 📂 Build
@@ -102,11 +102,11 @@ jobs:
         with:
           java-version: '22'
           distribution: 'corretto'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: GITHUB_USERNAME  # env variable name for username
-          server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
+          #server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          #server-username: GITHUB_USERNAME  # env variable name for username
+          #server-password: API_TOKEN_GITHUB # env variable name for GitHub Personal Access Token
       - name: Build with Maven
         run: mvn -B package --file pom.xml
-        env:
-          GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
-          API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
+        #env:
+        #  GITHUB_USERNAME: ${{ secrets.USERNAME_GITHUB }}
+        #  API_TOKEN_GITHUB: ${{ secrets.ACCESS_TOKEN }}
